--- a/index.html
+++ b/index.html
@@ -4,93 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB 210 Assignment 3</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital@0;1&family=Roboto:ital,wght@0,100;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/asn3.css">
   </head>
   <body>
     <main>
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header>
-        <h1>Andrew Zellmer</h1>
-        <h2>Major: Advertising and Graphic Design</h2>
+        <div class="content-wrap">
+          <h1>Andrew Zellmer</h1>
+          <h2>Major: Advertising and Graphic Design</h2>
 
-        <p>I am currently studying Graphic Design and Advertising at Wake Tech.  Once I obtain my degree, my plan is to focus on freelancing and working with small businesses.</p>
-        <p>Add another paragraph if needed.</p>
+           <p>I am currently studying Graphic Design and Advertising at Wake Tech.  Once I obtain my degree, my plan is to focus on freelancing and working with small businesses.</p>
+
+           <p>While attending school, I also work full time as a bartender/server.</p>
+        </div>
       </header>
 
-      <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
+       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
       <section class="projects">
+        <div class="content-wrap">
         <h2>Featured Projects</h2>
         <p>Below are a few projects I have been involved with through school, as well freelancing.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
-        <section>
+        <section class="project-item">
+          <img class="cycles" src="images/viciouscyclespj.png" alt="Image of my final project for WEB140, Vicious Cycles">
           <h3>Vicious Cycles</h3>
-          <img src="images/viciouscyclespj.png" alt="Image of my final project for WEB140, Vicious Cycles">
-          <p>Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+          <p>Vicious Cycles was the culmination of everything we learned in our introductory "Web Development Tools" course.</p>
           <p>The full website can be found here: <a class="btn" href="http://wcet3.waketech.edu/azellmer/WEB140/viciouscyclesproject/index.html">Vicious Cycles Website</a></p>
         </section>
 
-        <section>
-          <h3>Ad Billboard</h3>
+        <section class="project-item">
           <img src="images/billboardpj.jpg" alt="Billboard ad for a car cleaning company">
-          <p>Above is a billboard design created for a Design Applications class.  Students were required to created an eye catching headline/tagline, as well as integrate images and design portrait and billboard advertisements with photoshop.</p>
+          <h3>Ad Billboard</h3>
+          <p>Students were required to created an eye catching headline/tagline, as well as integrate images and design portrait and billboard advertisements with photoshop.</p>
         </section>
 
-        <section>
+        <section class="project-item">
+          <img class="photography" src="images/photographypj.jpg" alt="wooden throne in the north carolina botanical gardens">
           <h3>Photography</h3>
-          <img src="images/photographypj.jpg" alt="wooden throne in the north carolina botanical gardens">
-          <p>I am a freelance photographer in my spare time.  While photography is mainly a hobby, I am available for hire for portrait photography.</p>
+          <p>I am a freelance photographer in my spare time.  While photography is mainly a hobby, I am available for hire.  Although I have had an opportunity to shoot weddings, portraits, and various other genres, I have found that my preferences are portrait photography, street photography, and nature.</p>
+          <p>The image to the left is a wooden throne found in the North Carolina Botanical Gardens; it was one of the first images that I captured, but is still one of my favorites to this day.</p>
         </section>
         <!-- End of Project block. -->
+        </div>
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
       <section class="work-experience">
-        <h2>Work Experience</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam facilis, accusamus cupiditate exercitationem ut architecto perspiciatis. Optio quaerat odio id?</p>
+        <div class="content-wrap">
+          <h2>Work Experience</h2>
+          
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam facilis, accusamus cupiditate exercitationem ut architecto perspiciatis. Optio quaerat odio id?</p>
 
-        <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
-          <h3>Job title</h3>
-          <p>Company Name</p>
-          <p>1987-2022</p>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, nisi.</p>
-          <p>Responsibilities</p>
-          <ul>
-            <li>Lorem ipsum</li>
-            <li>Lorem, ipsum</li>
-            <li>Lorem, ipsum</li>
-            <li>Lorem, ipsum</li>
-          </ul>
-        </section>
-        <!-- End of Job block. -->
+          <!-- Copy this whole <section> block to add more jobs. -->
+          <section>
+            <h3>Job title</h3>
+            <p>Company Name</p>
+            <p>1987-2022</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, nisi.</p>
+            <p>Responsibilities</p>
+            <ul>
+              <li>Lorem ipsum</li>
+              <li>Lorem, ipsum</li>
+              <li>Lorem, ipsum</li>
+              <li>Lorem, ipsum</li>
+            </ul>
+          </section>
+        </div>
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
       <section class="education">
-        <h2>Education</h2>
+        <div class="content-wrap">
+          <h2>Education</h2>
 
-        <!-- Copy this whole <section> block to add more schools. -->
-        <section>
-          <h3>Wake Technical Community College - Raleigh, NC</h3>
-          <p>Graphic Design and Advertising</p>
-        </section>
-        <section>
-        <h3>Chapel Hill High School - Chapel Hill, NC</h3>
-          <p>College University Prep Track, 2006</p>
-          <p>Primary Focus: Music and Cultural Arts</p>
-        </section>
-        <!-- End of School block. -->
+          <!-- Copy this whole <section> block to add more schools. -->
+          <section>
+            <h3>Wake Technical Community College - Raleigh, NC</h3>
+            <p>Graphic Design and Advertising</p>
+          </section>
+          <section>
+          <h3>Chapel Hill High School - Chapel Hill, NC</h3>
+            <p>College University Prep Track, 2006</p>
+            <p>Primary Focus: Music and Cultural Arts</p>
+          </section>
+          <!-- End of School block. -->
+        </div>
       </section>
 
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
-        <h2>Let's Keep in Touch!</h2>
+        <div class="content-wrap">
+          <h2>Let's Keep in Touch!</h2>
 
-        <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
-          <li><a href="mailto:email@example.com">ahzellmer@my.waketech.edu</a></li>
-        </ul>
+          <!-- Social media and contact links. Add or remove any networks. -->
+          <ul>
+            <li><a href="mailto:email@example.com">ahzellmer@my.waketech.edu</a></li>
+          </ul>
+        </div>
       </footer>
     </main>
   </body>
